<resources>
    <string name="app_name">MaterialDesignDemo</string>
    <string name="nav_header_text">Click to start login activity</string>
    <string name="nav_recycler_view">Recycler View</string>
    <string name="nav_scrolling">Scrolling</string>
    <string name="nav_fullscreen">Fullscreen</string>
    <string name="nav_bottom_navigation">Bottom Navigation</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_bottom_appbar">Bottom App Bar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_main_settings">Settings</string>
    <string name="tab_title_main_1">Cards</string>
    <string name="tab_title_main_2">Dialogs</string>
    <string name="tab_title_main_3">Widgets</string>
    <string name="main_snack_bar">This is a snack bar</string>
    <string name="main_snack_bar_action">Okay</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_category_basic">Basic Settings</string>
    <string name="settings_category_advanced">Advanced Settings</string>
    <string name="settings_category_other">Other Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_switch_preference_title">Switch Preference</string>
    <string name="settings_switch_preference_summary">Switch Preference Summary</string>
    <string name="settings_check_box_preference_title">Check Box Preference</string>
    <string name="settings_edit_text_preference_title">Edit Text Preference</string>
    <string name="settings_edit_text_preference_default_value">Material Design</string>
    <string name="settings_list_preference_dialog_title">List Preference</string>
    <string name="settings_list_preference_title">List Preference</string>
    <string name="settings_multi_select_list_preference_dialog_title">Multi Select List Preference</string>
    <string name="settings_multi_select_list_preference_title">Multi Select List Preference</string>
    <string name="settings_preference_click_title">OnPreferenceClickListener</string>
    <string name="settings_preference_click_to_activity">Click to start an activity</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_on_preference_click">onPreferenceClick</string>
    <string name="shortcut_label_recycler">Recycler View</string>
    <string name="shortcut_label_scrolling">Scrolling</string>
    <string name="shortcut_label_bottombar">Bottom App Bar</string>
    <string name="main_card_title">Title goes here</string>
    <string name="main_card_title_short">Title</string>
    <string name="main_card_subtitle">Subtitle here</string>
    <string name="main_card_details">Details here</string>
    <string name="main_card_button_1">ACTION 1</string>
    <string name="main_card_button_2">ACTION 2</string>
    <string name="main_flat_button_1_clicked">Flat Button 1</string>
    <string name="main_flat_button_2_clicked">Flat Button 2</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_neutral">Neutral</string>
    <string name="dialog_close">Close</string>
    <string name="main_dialog_simple">Simple dialog</string>
    <string name="main_dialog_simple_title">A simple dialog</string>
    <string name="main_dialog_simple_message">
        "A material metaphor is the unifying theory of a rationalized space and a system of motion. "
        "\nThe material is grounded in tactile reality, inspired by the study of paper and ink, yet technologically advanced and open to imagination and magic."</string>
    <string name="main_dialog_single_choice">Single choice dialog</string>
    <string name="main_dialog_multi_choice">Multi choice dialog</string>
    <string name="main_dialog_progress_title">Progress dialog...</string>
    <string name="main_dialog_progress">Progress dialog</string>
    <string name="main_dialog_data_picker">Date Picker Dialog</string>
    <string name="main_dialog_data_time">Time Picker Dialog</string>
    <string name="main_dialog_bottom">Bottom Dialog</string>
    <string name="main_dialog_fullscreen">Fullscreen Dialog</string>
    <string name="main_popup_menu">Popup Menu</string>
    <string name="main_widget_material_button">Material Buttons</string>
    <string name="main_widget_toggle_button">Toggle Button</string>
    <string name="main_widget_switch">Switch</string>
    <string name="main_widget_check_box">Check Box</string>
    <string name="main_widget_check_box_1">CheckBox 1</string>
    <string name="main_widget_check_box_2">CheckBox 2</string>
    <string name="main_widget_check_box_3">CheckBox 3</string>
    <string name="main_widget_radio">Radio Group and Radio Buttons</string>
    <string name="main_widget_radio_button_1">RadioButton 1</string>
    <string name="main_widget_radio_button_2">RadioButton 2</string>
    <string name="main_widget_radio_button_3">RadioButton 3</string>
    <string name="main_widget_seek_bar">Seek Bar</string>
    <string name="main_widget_progress_bar">Progress Bar</string>
    <string name="main_widget_extract_edit_text">Extract Edit Text</string>
    <string name="main_widget_text_input_layout">Text Input Layout</string>
    <string name="main_widget_edit_text">edit text</string>
    <string name="main_widget_spinner">Spinner</string>
    <string name="main_widget_data_picker">Date Picker</string>
    <string name="main_widget_time_picker">Time Picker</string>
    <string name="main_widget_chip">Chips</string>
    <string name="title_activity_login">Login</string>
    <string name="login_user_name_hint">phone or email</string>
    <string name="login_user_name_password">password</string>
    <string name="action_sign_in">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="error_invalid_name">Invalid user name</string>
    <string name="error_invalid_password">At least 4 characters</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_no_name">Input your phone or email</string>
    <string name="error_no_password">Input your password</string>
    <string name="snackbar_forgot_password">Oh oh !</string>
    <string name="snackbar_register">Oh oh !</string>
    <string name="title_activity_recycler_view">RecyclerView</string>
    <string name="tv_recycler_item_1">Swipe down to refresh</string>
    <string name="tv_recycler_item_2">Swipe left or right to dismiss it</string>
    <string name="tv_recycler_item_3">Drag up or down to move it</string>
    <string name="title_activity_share_view">Share View</string>
    <string name="share_view_press_it">You can press it</string>
    <string name="no_more_data">No more data</string>
    <string name="item_swipe_dismissed">Dismissed</string>
    <string name="item_swipe_undo">Undo</string>
    <string name="title_activity_scrolling">Scrolling</string>
    <string name="share_with">Share with</string>
</resources>