<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_recycler_and_swipe_refresh"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/nav_recycler_view" />
        <item
            android:id="@+id/nav_scrolling"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/nav_scrolling" />
        <item
            android:id="@+id/nav_full_screen"
            android:icon="@drawable/ic_fullscreen_black_24dp"
            android:title="@string/nav_fullscreen" />
        <item
            android:id="@+id/nav_bottom_navigation"
            android:icon="@drawable/ic_more_horiz_black_24dp"
            android:title="@string/nav_bottom_navigation" />
        <item
            android:id="@+id/nav_bottom_appbar"
            android:icon="@drawable/ic_bottom_appbar"
            android:title="@string/nav_bottom_appbar" />
    </group>

</menu>
