<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_main_1_3"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:layout_marginStart="@dimen/main_card_margin_horizontal"
    android:layout_marginEnd="@dimen/main_card_margin_horizontal"
    android:layout_marginBottom="@dimen/main_card_margin_vertical"
    android:foreground="?attr/selectableItemBackground"
    card_view:cardCornerRadius="@dimen/card_recycler_corner_radius"
    card_view:cardElevation="@dimen/card_recycler_elevation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_card_main_3_title"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_title_margin"
            android:layout_marginTop="@dimen/card_title_margin"
            android:layout_marginEnd="@dimen/card_title_margin"
            android:text="@string/main_card_title"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_card_main3_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_card_main_3_title"
            android:layout_marginStart="@dimen/card_subtitle_margin"
            android:layout_marginTop="@dimen/card_button_margin"
            android:layout_marginEnd="@dimen/card_subtitle_margin"
            android:text="@string/main_card_subtitle" />

        <TextView
            android:id="@+id/tv_card_main3_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_card_main3_subtitle"
            android:layout_marginStart="@dimen/card_subtitle_margin"
            android:layout_marginTop="@dimen/card_button_margin"
            android:layout_marginEnd="@dimen/card_subtitle_margin"
            android:text="@string/main_card_details"
            android:textColor="@color/gray_deep" />

        <View
            android:id="@+id/view_card_main3_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_card_main3_details"
            android:layout_marginTop="@dimen/card_title_margin"
            android:background="@color/gray_light" />

        <RatingBar
            style="?android:attr/ratingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_card_main3_line"
            android:background="?attr/selectableItemBackground"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="1.5"
            android:stepSize="0.5" />

        <ImageView
            android:id="@+id/img_card_main_3"
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:scaleType="fitXY"
            android:src="@drawable/material_design_11" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>